--- a/conversion.tex
+++ b/conversion.tex
@@ -1,7 +1,11 @@
+\chapter{Conversion}
+
 Converting from MS Word
 
 using the template
 
 using the webservice
+
+manual conversion
 
 manual postprocessing
