--- a/indexers.tex
+++ b/indexers.tex
@@ -1,10 +1,46 @@
-indexers
+\chapter{Indexing}
+\lsp books have an obligatory Name Index and an obligatory Subject Index. The Language Index is optional and should be used if your work makes reference to more than one language. 
+For the various ways to add entries to the index, refer to \tabref{tab:latex:indexentriese}. For every index, there are two commands. The shorter one adds a term to the relevant index but does not change your text. This is useful if the term you want to add to your index does not appear in exactly the same way in the text. If the term is indeed identical, you can use the command with an extra \computer{i}.
 
-nonce
-ranges
-name authority
+\begin{table}[h]
+\caption{Commands for creating index entries.}
+\label{tab:latex:indexentriese}
+ \begin{tabular}{p{2.5cm}>{\tt\small\raggedright}p{6.5cm}p{3cm}}
+  \lsptoprule
+  type & \rm\normalsize command & indexed term \\
+  \midrule
+  Subject Index& Nominalized sentences \textbf{$\setminus$is\{nominalization\}} are current. & nomina\-lization \\
+  Subject Index identical& ... while \textbf{$\setminus$isi\{nominalization\}} is less frequent ...  & nomina\-lization \\[2em]
+  Language Index & Varieties of Chinese \textbf{$\setminus$il\{Sinitic languages\}} differ in that ...& Sinitic languages \\
+  Language Index identical& The \textbf{$\setminus$ili\{Sinitic languages\}}, \mbox{however}, ... & Sinitic languages \\[2em]
+  Author Index & In Homeric \textbf{$\setminus$ia\{Homer\}} language, ...  & Homer\\
+  Author Index identical & This contradicts \textbf{$\setminus$iai\{Homer\}}, who had advocated ... & Homer \\
+  \lspbottomrule
+ \end{tabular}
+\end{table}
 
-check whether correct index is used
+If there are two or more entries on subsequent pages, the index generation will automatically produce a range. So, instead of `33,34,35,36', it will print out `33--36'. You can produce ranges yourself by using \computer{{\bs}\{someterm|(\}} for the start and  \computer{{\bs}is\{someterm|)\}} for the end of the range. 
 
-remove non-human authors from name index
+Do not use the indexing commands directly before punctuation as it can produce unwanted white space. Put it after the punctuation instead.
 
+If you compile your document with the option \computer{draftmode} all indexed terms will show up in the margins.
+
+When your are done with adding index terms to your document, the following commands will produce the Subject Index and the Name Index
+\begin{verbatim}
+makeindex -o yourfilename.ind yourfilename.idx
+makeindex -o yourfilename.lnd yourfilename.ldx
+\end{verbatim}
+
+In order to produce the author index, use
+\begin{verbatim} 
+    xindy -M texindy -M page-ranges -L english -C utf8 authors.idx
+\end{verbatim}
+\todo{check filenames}
+
+After the creation of the indexes, check for every index whether it contains only terms that should be found in this index (no languages in Subject Index and vice versa). Furthermore, check that every concept has exactly one entry in the index. It is easy to index the same concept once in the singular and then again in the plural, or once with a hyphen and once without. 
+
+For the Name Index, make sure that every author has exactly one entry. Common errors include abbreviated names, middle initials which are present in one entry but absent in another, different transcriptions of a name, and diacritics. These issues are fixed by opening your bibliography file and conforming the names of the authors there.
+
+After your indexed terms are final, check the Name Index for terms which are not names. This happens if one of your cited works has an institution as the author. Open the \computer{.adx} file and remove that entry. Be aware that a recompilation of your index will overwrite your changes.
+
+Check your index for overlong lines. Use hyphenations \computer{{\bs}mbox\{...\}} or \computer{{\bs}newline}s in the \computer{.adx} file to repair these. Again, a recompilation of the index will overwrite your changes.
