--- a/conversion.tex
+++ b/conversion.tex
@@ -1,11 +1,6 @@
 \chapter{Conversion}
+While it is preferable to work in \latex from the start, this is not always possible. For edited volumes, for instance, it is common that not all authors can acquire the necessary skills in due course. For those cases, you can use the templates for MS Word and LibreOffice provided on http://langsci-press.org/Meta/downloads. Follow the instructions in the templates. When you are finished, upload your file to \url{http://glottotopia.org/doc2tex/home}. This will give you a file which you can copy into the skeleton. You have the choice between `raw' and `mod'. Generally, `mod' is preferable as a number of adaptations for linguists and \lsp are already in place. If you run into problems with `mod', you can use `raw' as a fallback.
 
-Converting from MS Word
 
-using the template
-
-using the webservice
-
-manual conversion
-
+If you want to convert your file on your local computer, you can use the program \computer{writer2latex}. The relevant command is \computer{w2l -clean -wrap_lines_after=0 -multilingual=false -float_table=true -float_figure=true -use_caption=true -image_options="width=\textwidth" -use_tipa=true -use_bibtex=true -ignore_double_spaces=true -multilingual=false -formatting=ignore_most -use_color=false filename.odt}. You have to save your file in *odt format first
 manual postprocessing
