--- a/wrap-global.tex
+++ b/wrap-global.tex
@@ -23,7 +23,7 @@
 \newcommand{\bibtex}{\BibTeX\xspace}
 
 \usepackage{LSP/lsp-styles/avm}
-\usepackage{LSP/lsp-styles/lsp-makros}
+% \usepackage{LSP/lsp-styles/lsp-makros}
 
 
 % \usepackage{german}\selectlanguage{USenglish}
@@ -94,7 +94,7 @@
 \newcommand{\computer}[1]{\texttt{#1}}
 \newcommand{\bs}{$\backslash$}
 \begin{document}                
-% \maketitle                
+\maketitle                
 \tableofcontents      
 \mainmatter     
  
