--- a/lsp-makros.sty
+++ b/lsp-makros.sty
@@ -1,3 +1,5 @@
+\usepackage{booktabs}
+
 % Heiko Oberdiek
 % http://tex.stackexchange.com/questions/136644/vertical-space-in-interaction-with-figure-center-environment
 \newcommand{\oneline}[1]{%
@@ -55,15 +57,14 @@
 
 
 \newcommand{\ispackage}[1]{\if@noftnote%
-\index{package!\texttt{#1}}%
+\index{package!{\sc #1}}%
 \else%
-\index{package!\texttt{#1}|fn{*}}%
+\index{package!{\sc #1}|fn{*}}%
 \fi%
 }
 
-% breaks teh index
+% breaks the index
 %\usepackage{doc}
-
 
 
 \newcommand{\ispackageb}[1]{
@@ -90,4 +91,24 @@
 
 \newcommand\displaycmd[2]{%
   \DescribeMacro{#2}\centerline{\cmd{#1}}}
+  
+% \mex considered evil, as we need explicit reference to examples in XML
+% % The following allows for a quick reference to following or preceeding examples (\mex{1}) or
+% % (\mex{0}) but also (\mex{-1})
+% % taken from covington.sty (check)
+% \newcounter{lsptempcnt}
+% 
+% \newcommand{\mex}[1]{\setcounter{lsptempcnt}{\value{equation}}%
+% \addtocounter{lsptempcnt}{#1}%
+% \arabic{lsptempcnt}}%
 
+
+\newcommand{\sectref}[1]{{\S}~\ref{#1}}
+\newcommand{\tabref}[1]{Table~\ref{#1}}
+\newcommand{\figref}[1]{Figure~\ref{#1}}
+
+\usepackage{booktabs}
+\newcommand{\lsptoprule}{\midrule\toprule}
+\newcommand{\lspbottomrule}{\bottomrule\midrule} 
+
+\newcommand{\REF}[1]{(\ref{#1})}
