--- a/wrap-global.tex
+++ b/wrap-global.tex
@@ -23,7 +23,7 @@
 \newcommand{\bibtex}{\BibTeX\xspace}
 
 \usepackage{LSP/lsp-styles/avm}
-% \usepackage{LSP/lsp-styles/lsp-makros}
+\usepackage{LSP/lsp-styles/lsp-makros}
 
 
 % \usepackage{german}\selectlanguage{USenglish}
@@ -73,7 +73,7 @@
 
 
 % Chinese
-\usepackage[indentfirst=false]{xeCJK}
+% \usepackage[indentfirst=false]{xeCJK}
 % \setCJKmainfont{SimSun}
 
 % bidirectional text and support for Arabic/Persia\newfontfamily\Parsifont[Script=Arabic]{XB Niloofar}
