add generic rules

--- a/openness.tex
+++ b/openness.tex
@@ -11,7 +11,7 @@ A book is a complex document. Once your book is in final production mode, we use
 \begin{figure}
 \caption{Github highlighting version history}
 \label{fig:latex:github}
- \includegraphics[width=\textwidth]{github.png}
+%  \includegraphics[width=\textwidth]{github.png}
 \end{figure}
 
 \begin{figure}
