--- a/wrap-global.tex
+++ b/wrap-global.tex
@@ -97,8 +97,10 @@
 \maketitle                
 \tableofcontents      
 \mainmatter     
- 
+
+
 \include{authors}
+\include{gsr}
 \include{volumeeditors}
 \include{latex}
 \include{conversion}
@@ -106,7 +108,7 @@
 \include{indexers}
 \include{typesetters} 
 \include{openness}
-% \include{showcases}
+\include{showcases}
 \include{serieseditors}
 
 \backmatter
