--- a/wrap-indexers.tex
+++ b/wrap-indexers.tex
@@ -23,8 +23,9 @@
 \makeatletter
 \def\verbatim@font{\scriptsize\ttfamily}
 \makeatother
-     
+\newcommand{\bs}{$\backslash$}
 
+\newcommand{\computer}[1]{\texttt{#1}}
 \title{Language Science Press indexing guidelines}  
 \subtitle{General rules for indexers}
 \BackTitle{Language Science Press indexing guidelines}    
