more xpl for conversion

--- a/wrap-global.tex
+++ b/wrap-global.tex
@@ -23,7 +23,7 @@
 \newcommand{\bibtex}{\BibTeX\xspace}
 
 \usepackage{LSP/lsp-styles/avm}
-\usepackage{LSP/lsp-styles/lsp-makros}
+% \usepackage{LSP/lsp-styles/lsp-makros}
 
 
 % \usepackage{german}\selectlanguage{USenglish}
@@ -94,13 +94,13 @@
 \newcommand{\computer}[1]{\texttt{#1}}
 \newcommand{\bs}{$\backslash$}
 \begin{document}                
-\maketitle                
+% \maketitle                
 \tableofcontents      
 \mainmatter     
 
 
 \include{authors}
-\include{gsr}
+% \include{gsr}
 \include{volumeeditors}
 \include{latex}
 \include{conversion}
@@ -109,7 +109,7 @@
 \include{typesetters} 
 \include{openness}
 \include{showcases}
-\include{serieseditors}
+% \include{serieseditors}
 
 \backmatter
 \bibliography{lsp-abbrev,lsp-guidelines}  
